minor change to maintain complaince with JDK 1.7